--- a/app/src/main/res/layout/adapter_projeto.xml
+++ b/app/src/main/res/layout/adapter_projeto.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:padding="10dp"
         android:layout_height="match_parent">
 
         <CheckBox
