--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <item name="colorAccent">@color/accent</item>
         <item name="colorSurface">@color/fundo</item>
         <item name="colorError">#B00020</item>
-
+        <item name="checkedIconTint">@color/destaque</item>
         <!-- fundo-->
 
         <item name="android:textColorHint">@color/hint</item>
