Excluido butãos desnecessários

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,13 +6,17 @@
     android:layout_height="match_parent"
    >
 
+    <include
+        android:id="@+id/toolbarHome"
+        layout="@layout/fragment_toolbar_home"></include>
+
 
     <TextView
         android:id="@+id/textFiltroEnsaio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         android:text="@string/TxtHomeFiltrosEnsaiosStr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
