--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
         android:orderInCategory="100"
         android:title="novo projeto"
         android:icon="@drawable/ic_add"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/delet"
         android:orderInCategory="100"
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/action_ver"
         android:orderInCategory="100"
-        android:title="Tutorial"
+        android:title="Ajuda"
         android:icon="@drawable/ic_add"
         app:showAsAction="never" />
 
