--- a/app/src/main/res/layout/fragment_ensaio.xml
+++ b/app/src/main/res/layout/fragment_ensaio.xml
@@ -8,12 +8,11 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -215,16 +214,6 @@
                 app:layout_constraintStart_toStartOf="@+id/editTextGolpe2"
                 app:layout_constraintTop_toBottomOf="@+id/editTextGolpe2" />
 
-            <ImageButton
-                android:id="@+id/imageButtonHelpNivelAgua"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/editTextNivelAgua"
-                app:layout_constraintStart_toEndOf="@+id/editTextNivelAgua"
-                app:layout_constraintTop_toTopOf="@+id/editTextNivelAgua"
-                app:srcCompat="@android:drawable/ic_menu_help" />
-
             <EditText
                 android:id="@+id/editTextNivelAgua"
                 android:layout_width="wrap_content"
@@ -235,7 +224,9 @@
                 android:inputType="number"
                 android:text="xx"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageButtonHelpNivelAgua"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.51"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextGolpe3"
                 app:layout_constraintVertical_bias="1.0" />
 
@@ -247,6 +238,7 @@
                 android:text="Nível de água"
                 app:layout_constraintBottom_toBottomOf="@+id/editTextNivelAgua"
                 app:layout_constraintEnd_toStartOf="@+id/editTextNivelAgua"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/imageButtonDecrementGolpe3"
                 app:layout_constraintTop_toTopOf="@+id/editTextNivelAgua" />
 
@@ -261,16 +253,6 @@
                 app:layout_constraintTop_toTopOf="@+id/editTextPenetracao1" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/rodapeFuro"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-        app:layout_constraintVertical_bias="1.0">
-
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
