--- a/app/src/main/res/layout/acitivity_spt.xml
+++ b/app/src/main/res/layout/acitivity_spt.xml
@@ -37,7 +37,7 @@
         app:srcCompat="@drawable/icon_home" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/buttonMoreActions"
+        android:id="@+id/buttonAdcionar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
