--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,12 +15,11 @@
         android:id="@+id/textFiltroEnsaio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="80dp"
         android:text="@string/TxtHomeFiltrosEnsaiosStr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageFilterEnsaio"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -29,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="@string/TxtHomeMeusProjetosStr"
-        app:layout_constraintStart_toStartOf="@+id/textFiltroEnsaio"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/recyclerCategorias" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -71,8 +70,9 @@
         android:id="@+id/imageFilterEnsaio"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/textFiltroEnsaio"
-        app:layout_constraintEnd_toStartOf="@+id/textFiltroEnsaio"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textFiltroEnsaio"
         app:layout_constraintVertical_bias="0.428"
         app:srcCompat="@drawable/icon_filter" />
@@ -81,8 +81,9 @@
         android:id="@+id/imageView2"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/textMeusProjetos"
-        app:layout_constraintEnd_toStartOf="@+id/textMeusProjetos"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textMeusProjetos"
         app:srcCompat="@drawable/icon_folder" />
 
