--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,8 @@
 
         <!-- Primary color. -->
         <item name="colorPrimary">@color/color_primary</item>
+        <item name="actionMenuTextColor">@color/fundo</item>
+        <item name="tint">@color/color_primary</item>
         <item name="colorPrimaryVariant">@color/black</item>
 
         <!-- Estilos padrão. -->
