--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,6 +4,8 @@
         <!-- Primary brand color. -->
         <item name="android:colorPrimary">@color/color_primary</item>
         <item name="android:textColor">@color/white</item>
+        <item name="tint">@color/destaque</item>
+
         <item name="colorSecondary">@color/destaque</item>
 
 
