--- a/app/src/main/res/layout/adapter_home_projetos.xml
+++ b/app/src/main/res/layout/adapter_home_projetos.xml
@@ -11,7 +11,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageLogoProject"
@@ -23,9 +23,9 @@
             android:id="@+id/textNameProjeto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/imageLogoProject"
-            android:layout_marginTop="05dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="05dp"
+            android:layout_toEndOf="@id/imageLogoProject"
             android:text="Nome do projeto" />
 
         <TextView
@@ -33,10 +33,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textNameProjeto"
-            android:layout_toEndOf="@id/imageLogoProject"
-            android:layout_marginTop="05dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="05dp"
             android:layout_marginBottom="20dp"
+            android:layout_toEndOf="@id/imageLogoProject"
             android:text="Tipo de Ensaio"
             android:textColor="#FF0909" />
 
@@ -45,9 +45,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textTipoEnsaio"
-            android:layout_toEndOf="@id/imageLogoProject"
-            android:layout_marginTop="-5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="-5dp"
+            android:layout_toEndOf="@id/imageLogoProject"
             android:text="Descrição do projeto localização" />
 
         <TextView
@@ -55,10 +55,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textDescricaoProjeto"
-            android:layout_toEndOf="@id/imageLogoProject"
-            android:layout_marginTop="05dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="05dp"
+            android:layout_toEndOf="@id/imageLogoProject"
             android:text="Inicio do Projeto: xx/xx/xxxx" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textTipoEnsaio"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:visibility="gone" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
